--- a/my_list.html
+++ b/my_list.html
@@ -14,6 +14,9 @@
       <li>
         Kings of Leon - Fans
       </li>
+      <li>
+        Arctic Monkeys - Do I Wanna Know?
+      </li>
     </ul>
   </body>
 </html>
