--- a/my_list.html
+++ b/my_list.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <ol>
+    <p>
+      Here are some all-time great songs:
+    </p>
+    <ul>
       <li>
         Pearl Jam - Black
       </li>
@@ -17,7 +20,7 @@
       <li>
         Arctic Monkeys - Do I Wanna Know?
       </li>
-    </ol>
+    </ul>
   </body>
 </html>
 
